--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
 	<body>
 
-			</a href="ZombiesVSHumans/index.html"><p>Go!</p></a>
+			<a href="ZombiesVSHumans/index.html"><p>Go!</p></a>
 				
 	</body>
 </html>
